# Sorting-Comparison

./: CMakeLists.txt  README.md
Results/: Ordenados.csv  ParcialmenteOrdenados.csv
Sources/: main.cpp
Sources/BubbleSort/: bubble.cpp  bubble.h
Sources/BucketSort/: bucket.cpp  bucket.h
Sources/CountingSort/: counting.cpp  counting.h
Sources/FileManage/: rw_files.cpp  rw_files.h
Sources/InsertionSort/: insertion.cpp  insertion.h
Sources/MergeSort/: merge.cpp  merge.h
Sources/QuickSort/: quick.cpp  quick.h
Sources/SelectionSort/: selection.cpp  selection.h
Sources/Worker/: worker.cpp  worker.h
